evals/swebench/runs/coder-reap-25b-lite/score_logs/sympy__sympy-17630.test.log
# PYTHONWARNINGS='ignore::UserWarning,ignore::SyntaxWarning' bin/test -C --verbose sympy/matrices/expressions/tests/test_blockmatrix.py sympy/matrices/expressions/tests/test_matadd.py
Traceback (most recent call last):
  File "/tmp/swebench-work2/sympy__sympy-17630/bin/test", line 105, in <module>
    import sympy
  File "/tmp/swebench-work2/sympy__sympy-17630/sympy/__init__.py", line 60, in <module>
    from .polys import *
  File "/tmp/swebench-work2/sympy__sympy-17630/sympy/polys/__init__.py", line 57, in <module>
    from . import partfrac
  File "/tmp/swebench-work2/sympy__sympy-17630/sympy/polys/partfrac.py", line 17, in <module>
    def apart(f, x=None, full=False, **options):
  File "/tmp/swebench-work2/sympy__sympy-17630/sympy/utilities/decorator.py", line 80, in xthreaded
    return threaded_factory(func, False)
  File "/tmp/swebench-work2/sympy__sympy-17630/sympy/utilities/decorator.py", line 18, in threaded_factory
    from sympy.matrices import MatrixBase
  File "/tmp/swebench-work2/sympy__sympy-17630/sympy/matrices/__init__.py", line 19, in <module>
    from .immutable import ImmutableDenseMatrix, ImmutableSparseMatrix
  File "/tmp/swebench-work2/sympy__sympy-17630/sympy/matrices/immutable.py", line 7, in <module>
    from sympy.matrices.expressions import MatrixExpr
  File "/tmp/swebench-work2/sympy__sympy-17630/sympy/matrices/expressions/__init__.py", line 4, in <module>
    from .blockmatrix import BlockMatrix, BlockDiagMatrix, block_collapse, blockcut
  File "/tmp/swebench-work2/sympy__sympy-17630/sympy/matrices/expressions/blockmatrix.py", line 173
    elif hasattr(matrix, "shape"):
    ^
SyntaxError: invalid syntax
